actualizacion de imagenes y barra de navegación

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,49 +56,49 @@
                 <h2 class="titulo">Portafolio</h2>
                 <div class="galeria-port">
                     <div class="imagen-port">
-                        <img src="img/mac.jpg" alt="escritorioMac">
+                        <img src="img/desarrollador.jpg" alt="escritorioMac">
                         <div class="hover-galeria">
                             <img src="img/weapons.png" alt="target">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/mac.jpg" alt="escritorioMac">
+                        <img src="img/escritora.jpg" alt="escritorioMac">
                         <div class="hover-galeria">
                             <img src="img/weapons.png" alt="target">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/mac.jpg" alt="escritorioMac">
+                        <img src="img/cocinero.jpg" alt="escritorioMac">
                         <div class="hover-galeria">
                             <img src="img/weapons.png" alt="target">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/mac.jpg" alt="escritorioMac">
+                        <img src="img/fotografo.jpg" alt="escritorioMac">
                         <div class="hover-galeria">
                             <img src="img/weapons.png" alt="target">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/mac.jpg" alt="escritorioMac">
+                        <img src="img/maestro.jpg" alt="escritorioMac">
                         <div class="hover-galeria">
                             <img src="img/weapons.png" alt="target">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/mac.jpg" alt="escritorioMac">
+                        <img src="img/constructor.jpg" alt="escritorioMac">
                         <div class="hover-galeria">
                             <img src="img/weapons.png" alt="target">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/mac.jpg" alt="escritorioMac">
+                        <img src="img/abogado.jpg " alt="escritorioMac">
                         <div class="hover-galeria">
                             <img src="img/weapons.png" alt="target">
                             <p>Nuestro trabajo</p>
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/face.jpg" alt="">
+                    <img src="img/face2.jpg" alt="">
                     <div class="contenido-texto-card">
                         <h4>Name</h4>
                         <p>
@@ -148,12 +148,12 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, odio?</p>
                     </div>
                     <div class="servicio-ind">
-                        <img src="img/web.png" alt="">
+                        <img src="img/web1.svg" alt="">
                         <h3>Name</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, odio?</p>
                     </div>
                     <div class="servicio-ind">
-                        <img src="img/web.png" alt="">
+                        <img src="img/web2.svg" alt="">
                         <h3>Name</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, odio?</p>
                     </div>
@@ -164,18 +164,18 @@
             <div class="contenedor-footer">
                 <div class="content-foo">
                     <h4>Phone</h4>
-                    <p>4568521</p>
+                    <p>2222385895</p>
                 </div>
                 <div class="content-foo">
                     <h4>Email</h4>
-                    <p>hola@email.com</p>
+                    <p>lair.w3b@gmail.com</p>
                 </div>
                 <div class="content-foo">
-                    <h4>Location</h4>
-                    <p>4568521</p>
+                    <h4>Facebook</h4>
+                    <p>@LairW3b</p>
                 </div>
             </div>
-            <h2 class="titulo-final">&copy; Lair Web | Lair Rico</h2>
+            <h2 class="titulo-final">&copy; Lair W3b | Lair Rico</h2>
         </footer>
     </main>
 </body>
